sass/general.scss
:root {
    --active: none;
    --blur: blur(0.75rem);
    --search-blur: blur(2rem);
    /* --transition: 0s; */
}

[data-theme="dark"] {
    --bg-color: #242424;
    --glass-bg: rgba(36, 36, 36, 0.6);
    --search-bg: rgba(36, 36, 36, 0.8);
    --shadow-glass: 0 0 0.2rem 0.01rem rgb(0 0 0 / 0.4);
    --search-shadow-glass: 0 0 0.3rem 0.01rem rgb(0 0 0 / 0.6);
}

@media (prefers-color-scheme: light) {
    :root:not([data-theme="dark"]) {
        --bg-color: white;
        --glass-bg: rgba(255, 255, 255, 0.6);
        --search-bg: rgba(255, 255, 255, 0.8);
        --shadow-glass: 0 0 0.2rem 0.01rem rgb(0 0 0 / 0.2);
        --search-shadow-glass: 0 0 0.2rem 0.01rem rgb(0 0 0 / 0.3);
    }
}

@media (prefers-color-scheme: dark) {
    :root:not([data-theme="light"]) {
        --bg-color: #242424;
        --glass-bg: rgba(36, 36, 36, 0.6);
        --search-bg: rgba(36, 36, 36, 0.8);
        --shadow-glass: 0 0 0.2rem 0.01rem rgb(0 0 0 / 0.4);
        --search-shadow-glass: 0 0 0.3rem 0.01rem rgb(0 0 0 / 0.6);
    }
}

[data-theme="light"] {
    --bg-color: white;
    --glass-bg: rgba(255, 255, 255, 0.6);
    --search-bg: rgba(255, 255, 255, 0.8);
    --shadow-glass: 0 0 0.2rem 0.01rem rgb(0 0 0 / 0.2);
    --search-shadow-glass: 0 0 0.2rem 0.01rem rgb(0 0 0 / 0.3);
}

/* Disable zoom on hover for images */
img:not(
    .no-hover,
    .full-bleed,
    [src*="#no-hover"],
    [src*="#full-bleed"],
    .emoji
) {
    cursor: default;

    &:hover {
        transform: none;
    }

    &.start,
    &.end,
    &[src*="#start"],
    &[src*="#end"] {
        &:hover {
            transform: none;
        }
    }
}

// Change button font size
.buttons {
    a,
    button {
        font-size: var(--font-size-x-small);
    }
}

.tags {
    a {
        font-size: var(--font-size-x-small);
    }
}

/* Ensure videos do not zoom on hover */
video:hover {
    transform: none;
}

li::marker {
    color: var(--fg-color);
}

/* Cap article banner height at 20rem */
#banner-container {
    max-height: 20rem;

    & + #heading {
        margin-block-start: min(calc(50vw - 7rem), 13rem);
    }
}

#site-footer > p {
    font-family: "Lato", var(--font-system-ui);
    font-size: var(--font-size-small);
}

// Reduce excessive top margin on buttons
.buttons {
    margin-block-start: 1.5rem;
}

